# arenasim-prototype

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  build.rs  settings.ron
.cargo/: config.toml
.claude/: settings.json
assets/: .gitkeep
assets/audio/: .gitkeep
assets/config/: abilities.ron  characters.ron  items.ron  (+3 more)
design-docs/: bevy-patterns.md  blog-agentic-development.md  egui-migration-summary.md  game-design-doc.md  project-todos.md  roadmap.md  session-notes.md  stat-scaling-system.md  tech-stack-decision.md  wow-mechanics.md
docs/: known-issues.md
scripts/: agg_sweep.py  comp_tiers.py  gen_sweep.py  hunter_2v2_matrix.sh  mage_2v2_matrix.sh  movement_kpis.sh  run_combat_tests.sh  shaman_2v2_matrix.sh
src/: cli.rs  keybindings.rs  lib.rs  main.rs  settings.rs
tests/: ability_tests.rs  cast_guard_tests.rs  class_ai_decisions.rs  combat_log_tests.rs  combat_snapshot_tests.rs  decision_trace_audit.rs  decision_trace_builder.rs  headless_tests.rs  movement_probes.rs  registration_audit.rs  results_screen_snapshot.rs
todos/: 001-complete-p1-division-by-zero-hp-calculation.md  002-complete-p2-inconsistent-allyinfo-pattern.md  003-complete-p2-duplicate-dispel-logic.md  004-complete-p2-vec-allocations-hot-path.md  005-complete-p2-combatant-info-tuple-creep.md  006-complete-p2-auras-file-growth.md  007-complete-p3-magic-numbers-hp-thresholds.md  008-complete-p3-excessive-docstring.md  009-complete-p2-centralize-class-role-methods.md  009-pending-p2-aura-refresh-on-reapply.md  010-complete-p2-warlock-wand-shot-label.md  011-complete-p3-stale-class-doc-comments.md  012-pending-p1-is-dead-guard-incomplete-death-logging.md  013-pending-p2-extract-incapacitation-helper.md  014-complete-p2-missing-cc-combat-log-entry.md  015-pending-p3-non-damage-death-path-missing-is-dead.md  016-complete-p3-spawn-validation-graphical-asymmetry.md
(+276 files in other folders)
