[package]
name = "arenasim"
version = "0.1.0"
edition = "2021"
description = "Arena combat autobattler prototype"
license = "MIT"

[dependencies]
bevy = "0.15"
bevy_egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"

# Enable dynamic linking for faster compile times during development
# Disable this for release builds
[features]
default = []
dev = ["bevy/dynamic_linking"]

# Optimize dependencies in dev mode for better runtime performance
# while keeping our code fast to compile
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1

