[package]
name = "arenasim"
version = "0.1.0"
edition = "2021"
description = "Arena combat autobattler prototype"
license = "MIT"

[dependencies]
bevy = { version = "0.16", features = ["jpeg"] }
bevy_egui = "0.34.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12"
# Pinned at 0.9 — rand 0.10 removes Clone from StdRng/ChaCha*Rng, which the
# seeded matrix runner depends on for byte-identical replay. SmallRng is also
# documented as non-reproducible across rand versions. Do not bump past 0.9.
rand = "0.9"
clap = { version = "4.4", features = ["derive"] }
smallvec = "1.13"

[dev-dependencies]
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot"] }
regex = "1"
tempfile = "3"

# Enable dynamic linking for faster compile times during development
# Disable this for release builds
[features]
default = []
dev = ["bevy/dynamic_linking"]

# Optimize dependencies in dev mode for better runtime performance
# while keeping our code fast to compile
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1

